# 12-950-parallel-programming

./: .gitignore  CMakeLists.txt
scripts/: postprocess.py
src/: CMakeLists.txt  Solver.cpp  Solver.h  SolverOmp.cpp  SolverOmp.h  Timer.cpp  Timer.h  main.cpp  main_omp.cpp
